# desktop-ai-agent

./: .env.example  .gitignore  AGENTS.md  FEATURES.md  README.md  agent_ui.py  architecture.md  debug14_6.md  execution_log.jsonl  future.md  future_features.md  implementation_plan.md  marketing_plan.md  patch.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json  test.py  test_prompts.txt  test_wifi_ui.py  todo.md  windows_agent.py
.gemini/antigravity-ide/brain/18b7b183-c069-43e3-beee-c3247d32aaf8/scratch/: inspect_handler.py  list_winmd.py  test_clr.py  test_joined_notifications.py  test_notification_db.py  test_notifications.py
backend/: agent_ui.py  calendar.db  credentials.db  hooks.py  memory.py  old_ui(dont update).py  safety.py  windows_agent.py  windows_agent.py.bak
backend/utils/: __init__.py  browser_utils.py  clipboard_daemon.py  comm_utils.py  file_search.py  window_utils.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: GlobeCanvas.tsx  LoadingScreen.tsx  MainApp.tsx
scripts/: run_webview.py
tests/: conftest.py  test_archive.py  test_brightness.py  test_browser_actions.py  test_clarification_integration.py  test_clipboard_history.py  test_comm_actions.py  test_corrections_integration.py  test_developer_actions.py  test_file_search.py  test_file_search_integration.py  test_focus_integration.py  test_ledger_integration.py  test_memory_integration.py  test_network_bluetooth.py  test_pomodoro.py  test_power_commands.py  test_safety_and_memory.py  test_startup_manager.py  test_system_utilities.py  test_tabs_integration.py  test_take_note.py  test_tiling_integration.py  test_todos.py  test_undo_integration.py  test_window_helpers.py
