[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-automation-agent"
version = "2.0.0"
description = "R.A.G.E. — a Windows automation agent with a React/pywebview UI and a CustomTkinter fallback."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Windows Automation Team" }]
keywords = ["windows", "automation", "agent", "llm", "pywebview", "react"]
requires-python = ">=3.11"
dependencies = [
    "pyautogui",
    "pygetwindow",
    "SpeechRecognition",
    "pyttsx3",
    "requests",
    "uiautomation",
    "customtkinter",
    "pyperclip",
    "psutil",
    "pywin32",
    "pycaw",
    "comtypes",
    "python-dotenv",
    "pywebview",
]

[project.optional-dependencies]
audio = ["pipwin", "pyaudio"]
dev   = ["pytest", "ruff", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.scripts]
rage-webview = "scripts.run_webview:main"
rage-ui      = "backend.agent_ui:main"
